<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="20dp"
    tools:context=".ui.donateStatus.StatusDonateActivity">

    <LinearLayout
        android:id="@+id/status_empty"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35">

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:elevation="4dp"
            app:lottie_autoPlay="true"
            app:lottie_fileName="status_empty.json"
            app:lottie_loop="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:letterSpacing="0.05"
            android:text="@string/empty_donation"
            android:textAlignment="center"
            android:textColor="@color/teal_700"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:letterSpacing="0.05"
            android:text="@string/status_empty"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/status_pending"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35">

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:elevation="4dp"
            app:lottie_autoPlay="true"
            app:lottie_fileName="status_pending.json"
            app:lottie_loop="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:letterSpacing="0.05"
            android:text="@string/pending"
            android:textAlignment="center"
            android:textColor="@color/yellow"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:letterSpacing="0.05"
            android:text="@string/status_pending"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/status_accept"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35">

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:elevation="4dp"
            app:lottie_autoPlay="true"
            app:lottie_fileName="status_success.json"
            app:lottie_loop="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:letterSpacing="0.05"
            android:text="@string/accept"
            android:textAlignment="center"
            android:textColor="@color/green_one"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:letterSpacing="0.05"
            android:text="@string/status_accept"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/status_rejected"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35">

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:elevation="4dp"
            app:lottie_autoPlay="true"
            app:lottie_fileName="status_rejected.json"
            app:lottie_loop="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:letterSpacing="0.05"
            android:text="@string/reject"
            android:textAlignment="center"
            android:textColor="@color/red"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:letterSpacing="0.05"
            android:text="@string/status_rejected"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>