<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/background"
    tools:context=".ui.profile.EditProfileActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loading_lottie"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:lottie_fileName="loading.json"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"
        android:visibility="invisible"
        android:elevation="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
        android:id="@+id/editProfile_btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/nothing"
        android:src="@drawable/baseline_arrow_back_ios_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/black" />

    <TextView
        android:id="@+id/editProfile_title_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_profile"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:contentPadding="20dp"
        android:layout_marginHorizontal="3dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editProfile_title_page">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editProfile_et_fullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                app:boxBackgroundColor="@color/green_three"
                app:hintEnabled="false"
                app:boxStrokeWidth="0dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editProfile_etx_fullname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fullname"
                    android:enabled="false"
                    android:focusable="false"
                    android:textColorHint="@color/black"
                    android:textColor="@color/black"
                    android:inputType="textPersonName"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editProfile_et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                app:boxBackgroundColor="@color/green_three"
                app:hintEnabled="false"
                app:boxStrokeWidth="0dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editProfile_etx_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/black"
                    android:textColor="@color/black"
                    android:hint="@string/email"
                    android:focusable="false"
                    android:enabled="false"
                    android:inputType="textEmailAddress"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editProfile_et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                app:boxBackgroundColor="@color/green_three"
                app:hintEnabled="false"
                app:boxStrokeWidth="0dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editProfile_etx_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone"
                    android:textColorHint="@color/teal_200"
                    android:textColor="@color/black"
                    android:inputType="number"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editProfile_et_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            app:boxBackgroundColor="@color/green_three"
            app:hintEnabled="false"
            app:boxStrokeWidth="0dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.skydoves.powerspinner.PowerSpinnerView
                android:id="@+id/editProfile_etx_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/green_three"
                android:gravity="start"
                android:hint="@string/jenis_kelamin"
                android:padding="15dp"
                android:textColor="@color/black"
                android:textColorHint="@color/teal_200"
                android:textSize="15sp"
                app:spinner_arrow_gravity="end"
                app:spinner_arrow_padding="8dp"
                app:spinner_divider_color="@color/teal_200"
                app:spinner_divider_show="true"
                app:spinner_divider_size="0.4dp"
                app:spinner_item_array="@array/type_gender"
                app:spinner_popup_animation="normal"
                app:spinner_popup_background="@color/green_three"
                app:spinner_popup_elevation="3dp" />
        </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editProfile_et_kk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                app:boxBackgroundColor="@color/green_three"
                app:hintEnabled="false"
                app:boxStrokeWidth="0dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editProfile_etx_kk"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/family_id"
                    android:textColorHint="@color/teal_200"
                    android:textColor="@color/black"
                    android:inputType="number"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editProfile_et_typebank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                app:boxBackgroundColor="@color/green_three"
                app:hintEnabled="false"
                app:boxStrokeWidth="0dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.skydoves.powerspinner.PowerSpinnerView
                    android:id="@+id/editProfile_etx_typebank"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/green_three"
                    android:gravity="start"
                    android:hint="@string/jenis_bank"
                    android:padding="15dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/teal_200"
                    android:textSize="15sp"
                    app:spinner_arrow_gravity="end"
                    app:spinner_arrow_padding="8dp"
                    app:spinner_divider_color="@color/teal_200"
                    app:spinner_divider_show="true"
                    app:spinner_divider_size="0.4dp"
                    app:spinner_item_array="@array/type_bank_array"
                    app:spinner_popup_animation="normal"
                    app:spinner_popup_background="@color/green_three"
                    app:spinner_popup_elevation="3dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editProfile_et_rekening"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                app:boxBackgroundColor="@color/green_three"
                app:hintEnabled="false"
                app:boxStrokeWidth="0dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editProfile_etx_rekening"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/teal_200"
                    android:textColor="@color/black"
                    android:hint="@string/rekening"
                    android:inputType="number"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editProfile_et_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                app:boxBackgroundColor="@color/green_three"
                app:hintEnabled="false"
                app:boxStrokeWidth="0dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editProfile_etx_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address"
                    android:lines="3"
                    android:gravity="top|start"
                    android:textColorHint="@color/teal_200"
                    android:textColor="@color/black"
                    android:inputType="textMultiLine"
                    android:maxLines="6"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/editProfile_btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                app:cornerRadius="10dp"
                android:text="@string/save_profile"
                android:textStyle="bold"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>



</androidx.constraintlayout.widget.ConstraintLayout>