<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginVertical="5dp"
    app:cardCornerRadius="20dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/item__health_image"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:scaleType="centerCrop"
            android:src="@drawable/background"/>
        <TextView
            android:id="@+id/item__health_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="4dp"
            android:textAlignment="textStart"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginHorizontal="20dp"
            android:text="@string/app_name"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/donation_raised"
            android:layout_marginVertical="4dp"
            android:textColor="@color/teal_700"
            android:layout_marginHorizontal="20dp"/>

        <com.mckrpk.animatedprogressbar.AnimatedProgressBar
            android:id="@+id/animatedProgressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:layout_marginHorizontal="20dp"
            app:animationDurationInMs="1600"
            app:animationStyle="wave"
            app:lineWidth="6dp"
            app:max="1000"
            app:progress="250"
            app:progressColor="@color/green_one"
            app:progressTipColor="@color/sherpa_blue"
            app:progressTipEnabled="true"
            app:trackColor="@color/teal_700" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:gravity="center"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="20dp"
            android:layout_marginHorizontal="20dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/example_money"
                android:textColor="@color/green_one"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="textEnd"
                android:text="3 days left"
                android:textColor="@color/teal_700"
                android:textSize="15sp"/>
        </LinearLayout>




    </LinearLayout>
</com.google.android.material.card.MaterialCardView>